--- a/style.css
+++ b/style.css
@@ -294,3 +294,57 @@ transform: translateX(-50%);
 border: 0;
 width: 35px;
 }
+.user-status-post{
+    width: 100%;
+    background: #fff;
+    border-radius: 6px;
+    padding: 20px;
+    color: #626262;
+    transform: translateX(-5px);
+}
+.user-profile{
+    display: flex;
+    align-items: center;
+}
+.user-profile img{
+    width: 45px;
+    border-radius: 50%;
+    margin-right: 10px;
+}
+.user-profile p{
+    margin-bottom: -5px;
+    font-weight: 500;
+    color: #626262;
+}
+.user-profile small{
+font-size: 12px;
+}
+.post-container{
+    padding-left: 55px;
+    padding-top: 20px;
+}
+.post-container textarea{
+    width: 100%;
+    border: 0;
+    outline: 0;
+    border-bottom: 1px solid #ccc;
+    background: transparent;
+    resize: none;
+}
+.add-link{
+    display: flex;
+    margin-top: 10px;
+}
+.add-link a{
+    text-decoration: none;
+    display: flex;
+    align-items: center;
+    color: #626262;
+    margin-right: 30px;
+    font-size: 13px;
+}
+.add-link a img{
+width: 20px;
+margin-right: 10px;
+}
+
