--- a/style.css
+++ b/style.css
@@ -253,7 +253,7 @@ border-radius: 50%;
     background-position: center;
     background-size: cover;
     border-radius: 10px;
-    transform: translateX(-5px);
+    transform: translateX(-3px);
 }
 .story img{
     position: absolute;
@@ -261,7 +261,7 @@ border-radius: 50%;
     border-radius: 50px;
     top: 10px;
     left: 10px;
-    border: 5px solid #1876f2;
+    border: 3px solid #1876f2;
 }
 .story p{
     position: absolute;
@@ -347,4 +347,56 @@ font-size: 12px;
 width: 20px;
 margin-right: 10px;
 }
-
+.users-post-container{
+    width: 100%;
+    background: #fff;
+    border-radius: 6px;
+    padding: 20px;
+    color: #626262;
+    margin: 20px 0;
+    transform: translateX(-5px);
+}
+.user-profile span{
+    font-size: 13px;
+    color: #9a9a9a;
+}
+.post-text{
+    color: #626262;
+    margin: 15px 0;
+    font-size: 16px;
+}
+.post-text a{
+    color: #1876f2;
+    text-decoration: none;
+}
+.post-img{
+    width: 100%;
+    border-radius: 4px;
+    margin-bottom: 5px;
+}
+.post-row{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+.activity-icon div img{
+    width: 18px;
+    margin-right: 10px;
+}
+.activity-icon div{
+    display: inline-flex;
+    align-items: center;
+    margin-right: 30px;
+}
+.post-profile-icon{
+    display: flex;
+    align-items: center;
+}
+.post-profile-icon img{
+    width: 30px;
+    border-radius: 50%;
+    margin-right: 5px;
+}
+.post-row a{
+color: #9a9a9a;
+}
