--- a/stylelogin.css
+++ b/stylelogin.css
@@ -11,6 +11,8 @@ justify-content: center;
 align-items: center;
 min-height: 100vh;
 background: url(Imagenes/background.jpg) no-repeat;
+background-size: cover;
+background-position: center;
 }
 
 header{
@@ -19,7 +21,6 @@ header{
     left: 0;
     width: 100%;
     padding: 20px 100px;
-    background: red;
     display: flex;
     justify-content: space-between;
     align-items: center;
