--- a/stylelogin.css
+++ b/stylelogin.css
@@ -75,3 +75,12 @@ transition: .5s;
     background: #fff;
     color: #162938;
 }
+.wrapper{
+    position: relative;
+    width: 400px;
+    height: 440px;
+    background: transparent;
+    border: 2px solid rgba(255, 255, 255, .5);
+    border-radius: 20px;
+    backdrop-filter: blur(20px);
+}
