--- a/stylelogin.css
+++ b/stylelogin.css
@@ -113,6 +113,11 @@ transition: .5s;
     color: #162938;
     font-weight: 500;
     pointer-events: none;
+    transition: .5s;
+}
+.input-box input:focus~label,
+.input-box input:valid~label{
+    top: -5px;
 }
 .input-box input{
     width: 100;
@@ -120,8 +125,35 @@ transition: .5s;
     background: transparent;
     border: none;
     outline: none;
+    font-size: 1em;
+    color: #162938;
+    font-weight: 600;
+    padding: 0 35px 0 5px;
 }
 .input-box .icon{
 position: absolute;
 right: 8px;
+font-size: 1.2em;
+color: #162938;
+line-height: 57px;
+}
+
+.remember-forgot{
+    font-size: .9em;
+    color: #162938;
+    font-weight: 500;
+    margin: -15px 0 15px;
+    display: flex;
+    justify-content: space-between;    
+}
+.remember-forgot label input{
+    accent-color:#162938;
+    margin-right: 3px;
+}
+.remember-forgot a{
+    color: #162938;
+    text-decoration: none;
+}
+.remember-forgot a:hover{
+    text-decoration: underline;
 }
