--- a/stylelogin.css
+++ b/stylelogin.css
@@ -157,3 +157,15 @@ line-height: 57px;
 .remember-forgot a:hover{
     text-decoration: underline;
 }
+.btn{
+    width: 100%;
+    height: 45px;
+    background: #162938;
+    border: none;
+    outline: none;
+    border-radius: 6px;
+    cursor: pointer;
+    font-size: 1em;
+    color: #fff;
+    font-weight: 500;
+}
