--- a/stylelogin.css
+++ b/stylelogin.css
@@ -87,10 +87,33 @@ transition: .5s;
     display: flex;
     justify-content: center;
     align-items: center;
+    /*overflow: hidden; */
 }
 .wrapper .form-box{
     width: 100%;
     padding: 40px;
+}
+.wrapper .form-box.login{
+    /*display: none;*/
+}
+.wrapper .form-box.register{
+    position:absolute;
+    transform: translateX(400px);
+}
+.wrapper .icon-close{
+position: absolute;
+top: 0;
+right: 0;
+width: 45px;
+height: 45px;
+background: #162938;
+font-size: 2em;
+display: flex;
+color: #fff;
+justify-content: center;
+align-items: center;
+border-bottom-left-radius: 20px;
+cursor: pointer;
 }
 .form-box h2{
     font-size: 2em;
@@ -168,4 +191,18 @@ line-height: 57px;
     font-size: 1em;
     color: #fff;
     font-weight: 500;
+}
+.login-register{
+    font-size: .9em;
+    color: #162938;
+    text-align: center;
+    margin: 25px 0 10px;
+}
+.login-register p a {
+color: #162938;
+text-decoration: none;
+font-weight: 600;
+}
+.login-register p a:hover{
+    text-decoration: underline;
 }
