Se agrego interaccion con JavaScript pero no pude hacerlo funcionar (necesita revision), falta cambiar algunos colores y bordes de los input, pero se formo ventana de registro y login

--- a/stylelogin.css
+++ b/stylelogin.css
@@ -87,19 +87,40 @@ transition: .5s;
     display: flex;
     justify-content: center;
     align-items: center;
-    /*overflow: hidden; */
+    overflow: hidden;
+    transition: transform .5 ease, height .2s ease;
+}
+
+.wrapper.active-popup{
+transform: scaleX();
+}
+.wrapper.active{
+    height: 520px;
 }
 .wrapper .form-box{
     width: 100%;
     padding: 40px;
 }
 .wrapper .form-box.login{
-    /*display: none;*/
+    transition: transform .18 ease;
+    transform: translateX(0);
 }
+
+.wrapper.active .form-box.login{
+    transition: none;
+    transform: translateX(-400px);
+}
+
 .wrapper .form-box.register{
     position:absolute;
+    transition: none;
     transform: translateX(400px);
 }
+.wrapper.active .form-box.register{
+    transition: transform .18 ease;
+    transform: translateX(0);
+}
+
 .wrapper .icon-close{
 position: absolute;
 top: 0;
