--- a/stylelogin.css
+++ b/stylelogin.css
@@ -73,16 +73,16 @@ transition: .5s;
 }
 .navigation .boton-login-popup:hover{
     background: #fff;
-    color: #162938;
+    color: #2c253f;
 }
 .wrapper{
     position: relative;
-    width: 400px;
-    height: 440px;
+    width: 420px;
+    height: 450px;
     background: transparent;
     border: 2px solid rgba(255, 255, 255, .5);
     border-radius: 20px;
-    backdrop-filter: blur(20px);
+    backdrop-filter: blur(25px);
     box-shadow: 0 0 30px rgba(0, 0, 0, .5);
     display: flex;
     justify-content: center;
@@ -121,13 +121,13 @@ transform: scaleX();
     transform: translateX(0);
 }
 
-.wrapper .icon-close{
+/*.wrapper .icon-close{
 position: absolute;
 top: 0;
 right: 0;
 width: 45px;
 height: 45px;
-background: #162938;
+background: #000;
 font-size: 2em;
 display: flex;
 color: #fff;
@@ -135,67 +135,68 @@ justify-content: center;
 align-items: center;
 border-bottom-left-radius: 20px;
 cursor: pointer;
-}
-.form-box h2{
+}*/
+.form-box h1{
     font-size: 2em;
-    color:#162938;
+    color:#fff;
     text-align: center;
 }
 .input-box{
     position: relative;
     width: 100%;
     height: 50px;
-    border-bottom: 2px solid #162938;
     margin: 30px 0;
 }
 .input-box label{
     position: absolute;
     top: 50%;
-    left: 5px;
+    left: 10px;
     transform: translateY(-50%);
     font-size: 1em;
-    color: #162938;
+    color: #fff;
     font-weight: 500;
-    pointer-events: none;
-    transition: .5s;
 }
-.input-box input:focus~label,
-.input-box input:valid~label{
-    top: -5px;
-}
+
 .input-box input{
-    width: 100;
+    width: 100%;
     height: 100%;
     background: transparent;
     border: none;
     outline: none;
-    font-size: 1em;
-    color: #162938;
-    font-weight: 600;
-    padding: 0 35px 0 5px;
+    border: 2px solid rgba(255, 255, 255, .2);
+    border-radius: 40px;
+    font-size: 16px;
+    color: #fff;
+    padding: 20px 45px 20px 20px;
+}
+.input-box input::placeholder{
+    color: #fff;
+    font-size: 16px;
 }
 .input-box .icon{
-position: absolute;
-right: 8px;
-font-size: 1.2em;
-color: #162938;
-line-height: 57px;
+    position: absolute;
+    right: 20px;
+    top: 50%;
+    transform: translateY(-50%);
+    color: #fff;
+    font-size: 1.2em;
 }
+
 
 .remember-forgot{
     font-size: .9em;
-    color: #162938;
+    color: #fff;
     font-weight: 500;
     margin: -15px 0 15px;
     display: flex;
     justify-content: space-between;    
 }
 .remember-forgot label input{
-    accent-color:#162938;
+    accent-color:#fff;
     margin-right: 3px;
 }
 .remember-forgot a{
-    color: #162938;
+    color: #fff;
     text-decoration: none;
 }
 .remember-forgot a:hover{
@@ -204,10 +205,11 @@ line-height: 57px;
 .btn{
     width: 100%;
     height: 45px;
-    background: #162938;
+    background: #2c253f;
     border: none;
     outline: none;
-    border-radius: 6px;
+    border-radius: 40px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     cursor: pointer;
     font-size: 1em;
     color: #fff;
@@ -215,12 +217,12 @@ line-height: 57px;
 }
 .login-register{
     font-size: .9em;
-    color: #162938;
+    color: #fff;
     text-align: center;
     margin: 25px 0 10px;
 }
 .login-register p a {
-color: #162938;
+color: #fff;
 text-decoration: none;
 font-weight: 600;
 }
